--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -1,5 +1,9 @@
 name: CICD workflow
 
+# Update to the tag of hte code release you want to push
+env:
+  TAG_VERSION: 1.0.0
+
 # on:
 #   # Trigger the workflow on push events to the "test" branch
 #   push:
@@ -43,4 +47,5 @@ jobs:
 
       - name: Push code
         run: |
-          git push origin dev:test --force
+          # git push origin dev:test --force
+          echo This is the TAG_VERSION variable: $TAG_VERSION
