--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -1,12 +1,10 @@
 name: CICD workflow
 
-# Update to the tag of hte code release you want to push
-env:
-  TAG_VERSION: 1.0.0
-
-# Ask Subba how I protect the tet branch so I can only use a manual dispatch to run the workflow and then push the code
-
 on:
+  pull_request:
+    branches:
+    # pull_request event to listen for changes on the test branch
+      - test
   # Allows the workflow to be manually triggered
   workflow_dispatch:
 
@@ -15,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
+      # Should be in all workflows, almost. It tells github actions to download the content of my repo to my Runner (a VM). 
+      # All other operations may access that code now
         uses: actions/checkout@v3
 
   PyTest:
@@ -26,12 +26,3 @@ jobs:
           echo Simulating that we are running PyTests
           echo I will add tests later
           
-
-  Push_code_to_test_branch:
-    needs: PyTest
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Push code
-        run: |
-          echo This is the TAG_VERSION variable: $TAG_VERSION
