--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -1,5 +1,8 @@
 name: CICD workflow
 
+env:
+  PYTHON_VERSION: 3.9
+
 on:
   pull_request:
     branches:
@@ -20,9 +23,24 @@ jobs:
   PyTest:
     needs: Build
     runs-on: ubuntu-latest
-    steps:
-      - name: Run Pytest
-        run: |
-          echo Simulating that we are running PyTests
-          echo I will add tests later
+    steps: 
+      # Test to remove this actions
+      - uses: actions/checkout@v3  
+      - name: Set up Python ${{ env.MY_VAR }} 
+        uses: actions/setup-python@v4  
+        with:  
+          python-version: ${{ env.MY_VAR }}  
+      - name: Install dependencies  
+        run: |  
+          python -m pip install --upgrade pip  
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi    
+      - name: Test with pytest  
+        run: |  
+          coverage run -m pytest  -v -s  
+      - name: Generate Coverage Report  
+        run: |  
+          coverage report -m
+
+
+  
           
