--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       # Test to remove this actions
-      - uses: actions/checkout@v3  
+      # - uses: actions/checkout@v3  
       - name: Set up Python ${{ env.MY_VAR }} 
         uses: actions/setup-python@v4  
         with:  
