--- a/.github/workflows/test_and_release.yml
+++ b/.github/workflows/test_and_release.yml
@@ -1,8 +1,5 @@
 name: CICD workflow
 
-env:
-  PYTHON_VERSION: 3.9
-
 on:
   pull_request:
     branches:
@@ -14,22 +11,20 @@ on:
 jobs:
   Build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-      # Should be in all workflows, almost. It tells github actions to download the content of my repo to my Runner (a VM). 
-      # All other operations may access that code now
-        uses: actions/checkout@v3
+    strategy:  
+      matrix:  
+        python-version: ["3.10"]
 
   PyTest:
     needs: Build
     runs-on: ubuntu-latest
     steps: 
-      # Test to remove this actions
-      # - uses: actions/checkout@v3  
-      - name: Set up Python ${{ env.MY_VAR }} 
+    # Should be in all workflows, almost. It tells github actions to download the content of my repo to my Runner (a VM). 
+      - uses: actions/checkout@v3  
+      - name: Set up Python ${{ matrix.python-version }} 
         uses: actions/setup-python@v4  
         with:  
-          python-version: ${{ env.MY_VAR }}  
+          python-version: ${{ matrix.python-version }}  
       - name: Install dependencies  
         run: |  
           python -m pip install --upgrade pip  
@@ -40,6 +35,11 @@ jobs:
       - name: Generate Coverage Report  
         run: |  
           coverage report -m
+
+
+  
+          
+
 
 
   
